# MaungAi

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
maungai/: __init__.py  app.py  config.py  pipeline.py
scripts/: install_linux_tools.sh
tests/: test_config.py  test_pipeline.py
